[package]
name = "rust_ipinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
arc-swap = "1"
dashmap = "5"
maxminddb = { version = "0.23", features = ["serde_json"] }
memmap2 = "0.9"
once_cell = "1"
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
