[package]
name = "rust_ipinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
arc-swap = "1.7.1"
dashmap = "5.5.3"
maxminddb = { version = "0.24.0", features = ["serde_json"] }
memmap2 = "0.9.5"
once_cell = "1.19.0"
prometheus = "0.13.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
