[package]
name = "rust_ipinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
arc-swap = "1.7.1"
dashmap = "5.5.3"
maxminddb = "0.27.1"
memmap2 = "0.9.5"
once_cell = "1.19.0"
prometheus = "0.13.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "net"] }
